Fixed vertical scrollbar visible all the time

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+}
+
 :root {
   @media (max-width: 1024px) {
     font-size: 16px;
